--- a/src/SpecificClassScreen.form
+++ b/src/SpecificClassScreen.form
@@ -31,14 +31,6 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="4a512" class="javax.swing.JButton" binding="backButton">
-            <constraints/>
-            <properties>
-              <font size="32"/>
-              <foreground color="-16777216"/>
-              <text value="Back"/>
-            </properties>
-          </component>
           <component id="e6ce3" class="javax.swing.JLabel" binding="bottomPlannerName">
             <constraints/>
             <properties>
@@ -56,7 +48,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="ae291" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="ae291" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints border-constraint="North"/>
             <properties>
@@ -64,16 +56,65 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="2e778" class="javax.swing.JLabel" binding="header">
+              <grid id="3f3e2" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="100" height="-1"/>
+                  </grid>
                 </constraints>
                 <properties>
-                  <background color="-16777216"/>
-                  <font name="Courier New" size="65" style="1"/>
-                  <text value=""/>
+                  <background color="-16718561"/>
                 </properties>
-              </component>
+                <border type="none"/>
+                <children/>
+              </grid>
+              <grid id="682d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="100" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <background color="-16718561"/>
+                </properties>
+                <border type="none"/>
+                <children>
+                  <component id="4a512" class="javax.swing.JButton" binding="backButton">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <font size="32"/>
+                      <foreground color="-16777216"/>
+                      <horizontalAlignment value="0"/>
+                      <text value=""/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
+              <grid id="bb927" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-16718561"/>
+                </properties>
+                <border type="none"/>
+                <children>
+                  <component id="1caca" class="javax.swing.JLabel" binding="header">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <font name="Courier New" size="65" style="1"/>
+                      <text value=""/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
             </children>
           </grid>
           <grid id="38ed9" layout-manager="GridLayoutManager" row-count="2" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
