- improved error handling for input - made display changes to adding assignment screen - made other minor changes

--- a/src/SpecificClassScreen.form
+++ b/src/SpecificClassScreen.form
@@ -17,7 +17,7 @@
           <component id="2a93a" class="javax.swing.JLabel" binding="topPlannerName">
             <constraints/>
             <properties>
-              <font name="Courier New" size="25"/>
+              <font size="16"/>
               <foreground color="-16718561"/>
               <text value="MnM Uni Planner"/>
             </properties>
@@ -34,7 +34,7 @@
           <component id="e6ce3" class="javax.swing.JLabel" binding="bottomPlannerName">
             <constraints/>
             <properties>
-              <font name="Courier New" size="25"/>
+              <font size="16"/>
               <foreground color="-16718561"/>
               <text value="MnM Uni Planner"/>
             </properties>
