--- a/src/AddClassScreen.form
+++ b/src/AddClassScreen.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="AddClassScreen">
   <grid id="27dc6" binding="parentPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="1027" height="523"/>
+      <xy x="20" y="20" width="1082" height="523"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -17,7 +17,7 @@
           <component id="a7c2a" class="javax.swing.JLabel" binding="topPlannerName">
             <constraints/>
             <properties>
-              <font name="Courier New"/>
+              <font size="16"/>
               <foreground color="-16718561"/>
               <text value="MnM Uni Planner"/>
             </properties>
@@ -31,18 +31,10 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="89e6a" class="javax.swing.JButton" binding="backButton">
-            <constraints/>
-            <properties>
-              <font size="32"/>
-              <foreground color="-16777216"/>
-              <text value="Back"/>
-            </properties>
-          </component>
           <component id="aedac" class="javax.swing.JLabel" binding="bottomPlannerName">
             <constraints/>
             <properties>
-              <font name="Courier New"/>
+              <font size="16"/>
               <foreground color="-16718561"/>
               <text value="MnM Uni Planner"/>
             </properties>
@@ -64,16 +56,76 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="e6587" class="javax.swing.JLabel" binding="header">
+              <grid id="6998b" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <background color="-16777216"/>
-                  <font name="Courier New" size="65" style="1"/>
-                  <text value="Your Classes - Add Class"/>
+                  <background color="-16718561"/>
                 </properties>
-              </component>
+                <border type="none"/>
+                <children>
+                  <grid id="93522" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                        <preferred-size width="100" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <background color="-16718561"/>
+                    </properties>
+                    <border type="none"/>
+                    <children/>
+                  </grid>
+                  <grid id="e41bf" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
+                    <constraints>
+                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                        <preferred-size width="100" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <background color="-16718561"/>
+                    </properties>
+                    <border type="none"/>
+                    <children>
+                      <component id="89e6a" class="javax.swing.JButton" binding="backButton">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <font size="32"/>
+                          <foreground color="-16777216"/>
+                          <text value=""/>
+                        </properties>
+                      </component>
+                    </children>
+                  </grid>
+                  <grid id="315da" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <background color="-16718561"/>
+                    </properties>
+                    <border type="none"/>
+                    <children>
+                      <component id="3cf09" class="javax.swing.JLabel" binding="header">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <font name="Courier New" size="65" style="1"/>
+                          <text value="Add Course"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </grid>
+                </children>
+              </grid>
             </children>
           </grid>
           <grid id="20454" binding="buttonPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -89,7 +141,7 @@
                   </grid>
                 </constraints>
                 <properties>
-                  <font name="Courier New" size="36"/>
+                  <font name="Courier New" size="36" style="1"/>
                   <foreground color="-16777216"/>
                   <text value="Add Class"/>
                 </properties>
@@ -107,7 +159,7 @@
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <font name="Courier New" size="48"/>
+                  <font name="Courier New" size="48" style="1"/>
                   <text value="Course Name: "/>
                 </properties>
               </component>
@@ -116,7 +168,7 @@
                   <grid row="1" column="1" row-span="2" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <font name="Courier New" size="48"/>
+                  <font name="Courier New" size="48" style="1"/>
                   <text value="Course Code:"/>
                 </properties>
               </component>
